<resources>
    <string name="app_name">SmartBot</string>
    <string name="author">Gabriel Ulici</string>
	<string name="description">Teleoperate the robot NAO over wifi.</string>
    <string name="version_name">0.9.8b</string>
    <string name="version_code_key">version</string>
    <string name="naoPicture">Nao Picture</string>
    <string name="icon_icon">Icon</string>
    <string name="footer_string">http://gabrielulici.github.com/SmartBot</string>
    <string name="actionbar_robotname">Robot Name</string>
    <string name="actionbar_image">image</string>
    <string name="actionbar_battery">battery</string>
    <string name="item_network_title">Searching network for robots…</string>
    <string name="item_network_caption">Turn on the robot and make sure you\'re on the same Wifi network. If
        having trouble, try cycling your Wifi, opening port 30000 in your firewall, or tapping Menu and Refresh.</string>
    <string name="search_menu_refresh">Refresh Search</string>
    <string name="search_menu_manual">Manual Connect</string>
    <string name="search_menu_settings">Settings</string>
    <string name="search_manual_pos">Connect</string>
    <string name="search_manual_neg">Cancel</string>
    <string name="search_menu_quit">Quit</string>
    <string name="dia_ipaddress">IP. Address</string>
    <string name="dia_code">Port Nr. Ex. 9876</string>
    <string name="wifi_disabled_title">Wifi is turned off</string>
    <string name="wifi_disabled">Please make sure to turn on your wifi in Settings.</string>
    <string name="no_network_title">No wifi connection</string>
    <string name="no_network">Currently not connected to a wifi network. Please check your wifi settings.</string>
    <string name="dashboard_menu_disconnect">Disconnect</string>
    <string name="dashboard_menu_settings">Settings</string>
    <string name="dashboard_speech">Speech</string>
    <string name="dashboard_buttons">Buttons</string>
    <string name="dashboard_joystick">Joystick</string>
    <string name="dashboard_accelerometer">Accelerometer</string>
    <string name="dashboard_terminal">Terminal</string>
    <string name="dashboard_behaviors">Behaviors</string>
    <string name="speech_speak">Speak!</string>
    <string name="buttons_movements_turn_left">Turn Left</string>
    <string name="buttons_movements_left">Left</string>
    <string name="buttons_movements_sit">Sit Down</string>
    <string name="buttons_movements_forward">Forward</string>
    <string name="buttons_movements_backward">Backward</string>
    <string name="buttons_movements_stop_walk">Stop Walk</string>
    <string name="buttons_movements_turn_right">Turn Right</string>
    <string name="buttons_movements_right">Right</string>
    <string name="buttons_movements_stand">Stand</string>
    <string name="buttons_movements_getup_faceup">GetUp FaceUp</string>
    <string name="buttons_movements_getup_facedown">GetUp FaceDown</string>
    <string name="buttons_soccer_getup_faceup">GetUp FaceUp</string>
    <string name="buttons_soccer_getup_facedown">GetUp FaceDown</string>
    <string name="buttons_soccer_kicks">Kicks</string>
    <string name="buttons_soccer_forward_left">Forward Left</string>
    <string name="buttons_soccer_side_left"> Side Left </string>
    <string name="buttons_soccer_back_left">Back Left</string>
    <string name="buttons_soccer_forward_right">Forward Right</string>
    <string name="buttons_soccer_side_right">Side Right</string>
    <string name="buttons_soccer_back_right">Back Right</string>
    <string name="buttons_soccer_saves">Saves</string>
    <string name="buttons_soccer_save_left">Save Left</string>
    <string name="buttons_soccer_save_right">Save Right</string>
    <string name="buttons_soccer_ragent">RAgent</string>
    <string name="buttons_soccer_find_ball">Find Ball</string>
    <string name="buttons_soccer_goto_ball">Goto Ball</string>
    <string name="buttons_soccer_attack">Attack</string>
    <string name="buttons_soccer_defend">Defend</string>
    <string name="buttons_soccer_penalized">Penalized</string>
    <string name="buttons_soccer_initial">Initial</string>
    <string name="buttons_body_control_head_control">Head Control</string>
	<string name="buttons_body_control_left">Left</string>
	<string name="buttons_body_control_center">Center</string>
	<string name="buttons_body_control_right">Right</string>
	<string name="buttons_body_control_up">UP</string>
	<string name="buttons_body_control_down">DOWN</string>
	<string name="buttons_body_control_hands_control">Hands Control</string>
	<string name="buttons_body_control_left_up">Left Up</string>
	<string name="buttons_body_control_left_down">Left Down</string>
	<string name="buttons_body_control_right_up">Right Up</string>
	<string name="buttons_body_control_right_down">Right Down</string>
	<string name="buttons_body_control_hands_up">Hands Up</string>
	<string name="buttons_body_control_hands_down">Hands Down</string>
    <string name="buttons_behavior_special_action">Special Actions</string>
    <string name="buttons_behavior_presentation">Presentation</string>
    <string name="buttons_behavior_hello">Hello</string>
    <string name="buttons_behavior_eyes_anim">Eyes Anim.</string>
    <string name="buttons_behavior_follow_me">Follow Me</string>
    <string name="buttons_behavior_go_and_rest">Go and Rest</string>
    <string name="buttons_behavior_storys">Storys</string>
    <string name="buttons_behavior_3_musketeers">The 3 Musketeers</string>
    <string name="buttons_behavior_star_wars">Star Wars Story</string>
    <string name="buttons_behavior_dances">Dances</string>
    <string name="buttons_behavior_caravan">Caravan</string>
    <string name="buttons_behavior_taichi">Taichi</string>
    <string name="buttons_behavior_thriller">Thriller</string>
    <string name="buttons_behavior_vangelis">Vangelis</string>
    <string name="buttons_behavior_stop_behavior">Stop Behavior</string>
    <string name="joystick_left_kick">Left Kick</string>
    <string name="joystick_left_back_kick">Left Back Kick</string>
    <string name="joystick_sit">Sit</string>
    <string name="joystick_stand">Stand</string>
    <string name="joystick_right_back_kick">Right Back Kick</string>
    <string name="joystick_right_kick">Right Kick</string>
    <string name="acc_acc_data">Accelerometer Data :</string>
    <string name="dots">...........</string>
    <string name="dots2">--.--</string>
    <string name="robot_accX">AccX  : </string>
    <string name="robot_accY">AccY  : </string>
    <string name="robot_accZ">AccZ  : </string>
    <string name="robot_roll">Roll  : </string>
    <string name="robot_pitch">Pitch  : </string>
    <string name="acc_sit">Sit Down</string>
    <string name="acc_stand">Stand</string>
    <string name="acc_start">Start</string>
    <string name="acc_stop">Stop</string>
    <string name="title">SmartBot Preferences</string>
    <string name="default_port">Default Port</string>
    <string name="default_value_port">30000</string>
    <string name="title_do_not_use_default_port">Do not use default port</string>
    <string name="summary_do_not_use_default_port">Default port is 30000 </string>
    <string name="title_other_port">Port Number</string>
    <string name="summary_other_port">Summary of other port!</string>
    <string name="dialog_title_other_port">Please enter another port number:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="display_widgetlocations_default"/>
    <string name="widgetlocations_howto">Draw rectangles to indicate widget positions. Long press to delete.</string>
    <string name="reset_display">Are you sure you want to reset all display-related settings?</string>
    <string name="reset_display_toast">All display-related settings reset.</string>
    <string name="reset_color">Are you sure you want to reset all color-related settings?</string>
    <string name="reset_color_toast">All color-related settings reset.</string>
    <string name="reset_all">Are you sure you want to reset all settings?</string>
    <string name="reset_all_toast">All settings reset.</string>
    <string name="settings_key">settings</string>
    <string name="settings_header">Settings</string>
    <string name="settings_display">Display and Game</string>
    <string name="settings_display_key">display</string>
    <string name="settings_display_summary">Layout, offsets, FPS&#8230;</string>
    <string name="settings_color">Colors and Background</string>
    <string name="settings_color_key">colors</string>
    <string name="settings_color_summary">Background, bricks, ball&#8230;</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_reset_key">reset</string>
    <string name="settings_game_usercontrol">User Control</string>
    <string name="settings_game_usercontrol_key">game_usercontrol</string>
    <string name="settings_game_usercontrol_summary">Allow touches on the screen to influence direction</string>
    <string name="settings_display_fps">FPS</string>
    <string name="settings_display_fps_key">display_fps</string>
    <string name="settings_display_fps_summary">Number of times per second to advance the game</string>
    <string name="settings_display_layout">Layout</string>
    <string name="settings_display_showwalls">Show Walls</string>
    <string name="settings_display_showwalls_key">display_showwalls</string>
    <string name="about">About</string>
    <string name="about_key">about</string>
    <string name="about_summary">Change log, legal, todo&#8230;</string>
    <string name="about_header_key">about_header</string>
    <string name="about_header_summary">Teleoperate the robot NAO over wifi.</string>
    <string name="about_contents">Contents</string>
    <string name="changelog">Change Log</string>
    <string name="changelog_key">changelog</string>
    <string name="changelog_summary">Summary of differences between versions</string>
    <string name="legal">Legal Notice</string>
    <string name="legal_key">legal</string>
    <string name="legal_summary">Additional attribution</string>
    <string name="todo">To Do / Requests</string>
    <string name="todo_key">todo</string>
    <string name="todo_summary">List of features pending implementation</string>
    <string name="githubapp">GitHub Project</string>
    <string name="githubapp_key">github</string>
    <string name="githubapp_summary">The source code of the app.</string>
    <string name="app_website">App Website</string>
    <string name="app_website_key">app_website</string>
    <string name="app_website_summary">http://gabrielulici.github.com/SmartBot/</string>
    <string name="information_header">Information</string>
    <string name="information_version">Version</string>
    <string name="information_version_key">information_version</string>
    <string name="information_author">Author</string>
    <string name="information_author_key">information_author</string>
    <string name="information_contact">Contact</string>
    <string name="information_contact_email">E-Mail</string>
    <string name="information_contact_email_key">information_contact_email</string>
    <string name="information_contact_email_summary">ulicigabriel@gmail.com</string>
    <string name="information_contact_twitter">Twitter</string>
    <string name="information_contact_twitter_key">information_contact_twitter</string>
    <string name="information_contact_twitter_summary">\@Gabriel_Ulici</string>
    <string name="information_contact_website">Author Website</string>
    <string name="information_contact_website_key">information_contact_website</string>
    <string name="information_contact_website_summary">http://gabrielulici.github.com</string>
    <string name="githubauthor">GitHub Projects</string>
    <string name="githubauthor_key">github</string>
    <string name="githubauthor_summary">All the open source projects.</string>
</resources>