<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_hixs"
    tools:context=".ButtonsBodyControlActivity" >

    <RelativeLayout
        android:layout_width="358dp"
        android:layout_height="563dp" >

        <TextView
            android:id="@+id/textViewHeadControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/buttons_body_control_head_control"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_btnbody_center"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_btnbody_left"
            android:layout_alignBottom="@+id/btn_btnbody_left"
            android:layout_centerHorizontal="true"
            android:text="@string/buttons_body_control_center" />

        <Button
            android:id="@+id/btn_btnbody_right"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/btn_btnbody_center"
            android:layout_toRightOf="@+id/btn_btnbody_down"
            android:text="@string/buttons_body_control_right" />

        <Button
            android:id="@+id/btn_btnbody_down"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_btnbody_up"
            android:layout_alignBottom="@+id/btn_btnbody_up"
            android:layout_toRightOf="@+id/btn_btnbody_center"
            android:text="@string/buttons_body_control_down" />

        <Button
            android:id="@+id/btn_btnbody_left"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewHeadControl"
            android:layout_marginTop="11dp"
            android:layout_toLeftOf="@+id/btn_btnbody_up"
            android:text="@string/buttons_body_control_left" />

        <Button
            android:id="@+id/btn_btnbody_up"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_btnbody_center"
            android:layout_marginTop="11dp"
            android:layout_toLeftOf="@+id/btn_btnbody_center"
            android:layout_toRightOf="@+id/btn_btnbody_leftup"
            android:text="@string/buttons_body_control_up" />

        <TextView
            android:id="@+id/textViewHandsControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btn_btnbody_up"
            android:layout_marginTop="16dp"
            android:text="@string/buttons_body_control_hands_control"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_btnbody_leftup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewHandsControl"
            android:layout_marginTop="12dp"
            android:text="@string/buttons_body_control_left_up" />

        <Button
            android:id="@+id/btn_btnbody_rightdown"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/btn_btnbody_rightup"
            android:text="@string/buttons_body_control_right_down" />

        <Button
            android:id="@+id/btn_btnbody_rightup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_btnbody_leftdown"
            android:layout_alignBottom="@+id/btn_btnbody_leftdown"
            android:layout_toLeftOf="@+id/btn_btnbody_rightdown"
            android:text="@string/buttons_body_control_right_up" />

        <Button
            android:id="@+id/btn_btnbody_leftdown"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_btnbody_leftup"
            android:layout_alignBottom="@+id/btn_btnbody_leftup"
            android:layout_toRightOf="@+id/btn_btnbody_leftup"
            android:text="@string/buttons_body_control_left_down" />

        <Button
            android:id="@+id/btn_btnbody_handsdown"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_btnbody_handsup"
            android:layout_alignBottom="@+id/btn_btnbody_handsup"
            android:layout_alignLeft="@+id/btn_btnbody_rightup"
            android:text="@string/buttons_body_control_hands_down" />

        <Button
            android:id="@+id/btn_btnbody_handsup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/btn_btnbody_leftdown"
            android:layout_centerVertical="true"
            android:text="@string/buttons_body_control_hands_up" />

    </RelativeLayout>

</LinearLayout>