<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout11"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_hixs"
    android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_acc_sit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_sit" />

            <Button
                android:id="@+id/btn_acc_stop"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/acc_stop" />

            <Button
                android:id="@+id/btn_acc_stand"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/btn_acc_sit"
                android:text="@string/acc_stand" />

            <Button
                android:id="@+id/btn_acc_start"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btn_acc_stop"
                android:text="@string/acc_start" />

        </RelativeLayout>

    </TableLayout>